# perftest-brain

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.planning/: PROJECT.md
src/: checkout.rs  input.rs  logs.rs  main.rs  tools.rs  types.rs
src/analysis/: culprit.rs  mod.rs
src/api/: bugzilla.rs  mod.rs  perfherder.rs  pushlog.rs  taskcluster.rs  treeherder.rs
src/diagnosis/: mod.rs  patterns.rs
src/doctor/: mod.rs
src/index/: mod.rs  searchfox.rs
src/patch/: manifest.rs  mod.rs  vcs.rs
src/sheriff/: mod.rs
tests/: cli.rs
