[package]
name = "perftest-brain"
version = "0.3.4"
edition = "2021"

[[bin]]
name = "perftest-brain"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
url = "2.5"
ignore = "0.4"
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
